--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,6 @@ android {
         versionName "1.0"
 
         buildConfigField("String", "CONSUMER_KEY", apikeyProperties['CONSUMER_KEY'])
-        buildConfigField("String", "CONSUMER_SECRET", apikeyProperties['CONSUMER_SECRET'])
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -73,7 +72,7 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
     //Kotlin Coroutines
-    def coroutines_android_version = '1.3.7'
+    def coroutines_android_version = '1.4.1'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_android_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_android_version"
 
@@ -94,9 +93,6 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$glide_version"
     kapt "com.github.bumptech.glide:compiler:$glide_version"
 
-    // Shimmer
-    implementation 'com.facebook.shimmer:shimmer:0.1.0@aar'
-
     //Timber
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
@@ -104,6 +100,10 @@ dependencies {
     implementation "com.airbnb.android:lottie:2.8.0"
 
     testImplementation 'junit:junit:4.13.1'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    testImplementation "io.mockk:mockk:1.10.0"
+    testImplementation "com.google.truth:truth:1.1"
+    testImplementation 'android.arch.core:core-testing:1.1.1'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.3'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
